# artesanias-FastAPI

./: README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: alembic.ini  main.py  register.py
app/alembic/: env.py
app/alembic/versions/: 0001_add_product_model.py
app/core/auth/models/: roles.py
app/core/db/: register.py  session.py
app/core/db/default_data/: import_bulk_default_data.py
app/modules/products/: register.py
app/modules/products/models/: product.py
app/modules/products/providers/: products.py
app/modules/products/routes/: products.py
