[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Admin <camilapinz18@gmail.com>"]
license = "MIT"


[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.11.3"
fastapi = "^0.89.0"
python-multipart = "^0.0.5"
email-validator = "^1.0.5"
requests = "^2.23.0"
celery = "^4.4.2"
sqlalchemy_filters = "^0.13.0"
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
tenacity = "^6.1.0"
pydantic = "^1.4"
emails = "^0.5.15"
raven = "^6.10.0"
gunicorn = "^20.0.4"
jinja2 = "^3.1.2"
psycopg2-binary = "^2.8.5"
alembic = "^1.4.2"
sqlalchemy = "^1.3.16"
pytest = "^5.4.1"
python-jose = {extras = ["cryptography"], version = "^3.1.0"}
httpcore = "^0.11.0"
pdfkit = "^1.0.0"
cryptography = "^40.0.2"
cloudant = "^2.15.0"
openpyxl = "^3.1.2"
pandas = "^2.0.3"
numpy = "^1.24.4"
twilio = "^8.10.0"
sentry-sdk = {extras = ["fastapi"], version = "^1.43.0"}
mkdocs-material = "^9.5.17"
boto3 = "^1.34.84"
lxml = "^5.2.2"
typed-ast = "1.5.5"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "uvicorn main:app --reload"
